<resources>
    <!-- Login & Register-->
    <string name="app_name">ShameApp</string>
    <string name="loginText">Login</string>
    <string name="logoutText">Logout</string>
    <string name="registerText">Register</string>
    <string name="passwordText">Password</string>
    <string name="passwordRepeatText">Repeat password</string>
    <string name="loginIfText">Login if you have an account</string>
    <string name="registerIfText">Register if you do not have an account</string>

    <!-- Login -->
    <string name="search">Search</string>
    <string name="toWatch">To watch list</string>
    <string name="watched">Watched list</string>

    <string name="movies">Movies</string>
    <string name="people">People</string>
    <string name="tvshows">Series</string>

    <string name="myList">Moja lista</string>
    <string name="mainPage">Strona główna</string>

    <string name="birthday">Birthday</string>
    <string name="deathday">Deathday</string>
    <string name="birthPlace">Birth place</string>
    <string name="biography">Biography</string>
    <string name="knownFrom">Known from:</string>

    <string name="isLiving">Wciąż żyje!</string>

    <string name="communityRating">Community Rating</string>
    <string name="description">Description</string>


    <string name="dataError">Data error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>